syntax = "proto3";
package pkg.types.v1;

option go_package = "github.com/bnb-chain/greenfield-storage-provider/pkg/types/v1";

import "gogoproto/gogo.proto";
import "pkg/types/v1/p2p_crypto_keys.proto";

message PacketPing {}

message PacketPong {}

message PacketMsg {
  int32 channel_id = 1 [(gogoproto.customname) = "ChannelID"];
  bool  eof        = 2 [(gogoproto.customname) = "EOF"];
  bytes data       = 3;
}

message Packet {
  oneof sum {
    PacketPing packet_ping = 1;
    PacketPong packet_pong = 2;
    PacketMsg  packet_msg  = 3;
  }
}

message AuthSigMessage {
    pkg.types.v1.PublicKey pub_key = 1 [(gogoproto.nullable) = false];
  bytes                       sig     = 2;
}